initial checkin for deployment
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11
+FROM python:3.10
 
 # Set the working directory to /app
 WORKDIR /app
@@ -9,10 +9,16 @@ COPY requirements.txt .
 # Install any needed packages specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-RUN pip install simple_ai_server peft
+RUN pip install peft
 
+ADD models.toml .
+
+ADD simple_ai ./simple_ai
+
+EXPOSE 8080
 
 # Set the command to run the application
-CMD [ "simple_ai serve" ]
+ENTRYPOINT [ "python" ]
+CMD [ "-m", "simple_ai", "serve",  "--host", "0.0.0.0" ]
 
 
