--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,14 +1,15 @@
-anyio==3.6.2 ; python_version >= "3.9" and python_version < "4.0"
-click==8.1.3 ; python_version >= "3.9" and python_version < "4.0"
-colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
-fastapi==0.94.1 ; python_version >= "3.9" and python_version < "4.0"
-grpcio==1.53.0 ; python_version >= "3.9" and python_version < "4.0"
-h11==0.14.0 ; python_version >= "3.9" and python_version < "4.0"
-idna==3.4 ; python_version >= "3.9" and python_version < "4.0"
-protobuf==4.22.1 ; python_version >= "3.9" and python_version < "4.0"
-pydantic==1.10.7 ; python_version >= "3.9" and python_version < "4.0"
-sniffio==1.3.0 ; python_version >= "3.9" and python_version < "4.0"
-starlette==0.26.1 ; python_version >= "3.9" and python_version < "4.0"
-tomli==2.0.1 ; python_version >= "3.9" and python_version < "3.11"
-typing-extensions==4.5.0 ; python_version >= "3.9" and python_version < "4.0"
-uvicorn==0.21.1 ; python_version >= "3.9" and python_version < "4.0"
+anyio
+click==8.1.3 
+colorama==0.4.6 
+fastapi==0.94.1 
+grpcio==1.53.0 
+h11==0.14.0 
+idna==3.4
+protobuf==4.22.1 
+pydantic==1.10.7 
+sniffio==1.3.0
+starlette==0.26.1 
+tomli==2.0.1 
+typing-extensions==4.5.0 
+uvicorn==0.21.1 
+tiktoken
