--- a/weaviate/manifests/vs.yaml
+++ b/weaviate/manifests/vs.yaml
@@ -7,7 +7,7 @@ spec:
   gateways:
   - istio-system/public
   hosts:
-  - weaviate.tom.bigbang.dev
+  - weaviate.leapfrogai.bigbang.dev
   http:
   - route:
     - destination:
