--- a/kubernetes/install.yaml
+++ b/kubernetes/install.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-deployment
+  namespace: leapfrogai
 spec:
   replicas: 1
   selector:
@@ -23,6 +24,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api
+  namespace: leapfrogai
 spec:
   selector:
     app: api
@@ -37,6 +39,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: embeddings-deployment
+  namespace: leapfrogai
 spec:
   replicas: 1
   selector:
@@ -60,6 +63,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: sentence-transformers
+  namespace: leapfrogai
 spec:
   selector:
     app: embeddings
@@ -73,37 +77,39 @@ spec:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: llama-deployment
+  name: stablelm-deployment
+  namespace: leapfrogai
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: llama
+      app: stablelm
   template:
     metadata:
       labels:
-        app: llama
+        app: stablelm
     spec:
       containers:
-        - name: llama-container
-          # imagePullPolicy: Always
-          imagePullPolicy: Never # Building on the node currently so we don't have to push/pull
-          image: ghcr.io/defenseunicorns/leapfrogai/redpanda:0.0.1
+        - name: stablelm-container
+          imagePullPolicy: Always
+          # imagePullPolicy: Never # Building on the node currently so we don't have to push/pull
+          image: ghcr.io/defenseunicorns/leapfrogai/stablelm-3b:0.0.1
           ports:
             - containerPort: 50051 # Assume this is the gRPC port
           resources:
             limits:
-              nvidia.com/gpu: 2
+              nvidia.com/gpu: 1
             requests:
-              nvidia.com/gpu: 2
+              nvidia.com/gpu: 1
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: llama
+  name: stablelm
+  namespace: leapfrogai
 spec:
   selector:
-    app: llama
+    app: stablelm
   ports:
     - name: grpc
       protocol: TCP
