--- a/kubernetes/namespace.yaml
+++ b/kubernetes/namespace.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Namespace
 metadata:
   labels:
-    istio-injection: disabled
+    istio-injection: disable
     zarf.dev/agent: ignore
   name: leapfrogai
