--- a/chart/templates/api/configmap.yaml
+++ b/chart/templates/api/configmap.yaml
@@ -1,14 +1,10 @@
 apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: api-model
 data:
-  models.toml: |
-    [llama-7B-4b]
-        [llama-7B-4b.metadata]
-            owned_by    = 'Defense Unicorns'
-            permission  = []
-            description = 'C++ implementation of LlaMA model, 7B parameters, 4-bit quantization'
-        [llama-7B-4b.network]
-            url = 'alpaca:50051'
-            type = 'gRPC'
+  models.toml: | 
+{{- if .Values.stablelm.enabled }}
     [stablelm-3b]
         [stablelm-3b.metadata]
             owned_by    = 'Defense Unicorns'
@@ -17,11 +13,13 @@ data:
         [stablelm-3b.network]
             url = 'stablelm:50051'
             type = 'gRPC'
+{{- end -}}
+{{ if .Values.embeddings.enabled }}
     [text-embedding-ada-002]
         [text-embedding-ada-002.metadata]
             owned_by    = 'Defense Unicorns'
             permission  = []
-            description = 'A pretend implementation of ada-0002 tha's actually all-MiniLM-L6-v2'
+            description = 'A pretend implementation of ada-0002 thats actually all-MiniLM-L6-v2'
         [text-embedding-ada-002.network]
             url = 'sentence-transformers:50051'
             type = 'gRPC'   
@@ -32,8 +30,7 @@ data:
             description = ' By default, input text longer than 256 word pieces is truncated.'
         [all-MiniLM-L6-v2.network]
             url = 'sentence-transformers:50051'
-            type = 'gRPC'       
-kind: ConfigMap
-metadata:
-  creationTimestamp: null
-  name: api-model
+            type = 'gRPC'   
+{{- end -}}
+    
+    
