--- a/zarf.yaml
+++ b/zarf.yaml
@@ -28,7 +28,19 @@ components:
       version: 0.0.1
       valuesFiles:
         - "values.yaml"
+  - name: dcgm-exporter
+    required: true
+    charts:
+    - name: dcgm-exporter
+      version: 3.1.7-3.1.4
+      url: https://github.com/NVIDIA/dcgm-exporter.git
+      gitPath: deployment
+      namespace: "leapfrogai"
     images:
-      - "ghcr.io/defenseunicorns/leapfrogai/api:0.0.1"
-      - "ghcr.io/defenseunicorns/leapfrogai/stablelm-3b:0.0.1"
-      - "ghcr.io/defenseunicorns/leapfrogai/embeddings:0.0.1"
+      - "nvcr.io/nvidia/k8s/dcgm-exporter:3.1.7-3.1.4-ubuntu20.04"
+  - name: dcgm-dashboard
+    required: true
+    manifests:
+      - name: dashboard
+        kustomizations:
+          - kubernetes/observibility
