--- a/zarf.yaml
+++ b/zarf.yaml
@@ -32,9 +32,8 @@ components:
     required: true
     charts:
     - name: dcgm-exporter
-      version: 3.1.7-3.1.4
-      url: https://github.com/NVIDIA/dcgm-exporter.git
-      gitPath: deployment
+      version: 3.1.4
+      url:  https://nvidia.github.io/dcgm-exporter/helm-charts
       namespace: "leapfrogai"
     images:
       - "nvcr.io/nvidia/k8s/dcgm-exporter:3.1.7-3.1.4-ubuntu20.04"
@@ -42,5 +41,6 @@ components:
     required: true
     manifests:
       - name: dashboard
+        namespace: monitoring
         kustomizations:
           - kubernetes/observibility
