--- a/weaviate/zarf.yaml
+++ b/weaviate/zarf.yaml
@@ -54,3 +54,4 @@ components:
     - "semitechnologies/weaviate:1.18.3"
     - "ghcr.io/defenseunicorns/leapfrogai/weaviate:0.0.3"
     - semitechnologies/transformers-inference:sentence-transformers-all-MiniLM-L6-v2
+    - semitechnologies/transformers-inference:distilbert-base-uncased
