--- a/values.yaml
+++ b/values.yaml
@@ -12,11 +12,25 @@ image:
   tag: 0.0.3
   repo: defenseunicorns/leapfrogai/weaviate
 
+
+env:
+  # maybe set this to the internal URL:
+  # OPENAI_BASE_URL: "http://api.leapfrogai.svc:8080"
+  OPENAI_BASE_URL: "https://leapfrogai.dd.bigbang.dev"
+
 modules:
   DEFAULT_VECTORIZER_MODULE: text2vec-transformers
   text2vec-transformers:
-    enabled: false
+    enabled: true
   text2vec-openai:
     enabled: true
 storage:
   size: 32Gi # default
+
+domain: dd.bigbang.dev
+
+istio:
+  enabled: true
+
+monitoring:
+  enabled: true
