--- a/zarf.yaml
+++ b/zarf.yaml
@@ -28,6 +28,10 @@ components:
       version: 0.0.1
       valuesFiles:
         - "values.yaml"
+    # images:
+    #   - "ghcr.io/defenseunicorns/leapfrogai/api:0.0.1"
+    #   # - "ghcr.io/defenseunicorns/leapfrogai/stablelm-3b:0.0.1"
+    #   - "ghcr.io/defenseunicorns/leapfrogai/embeddings:0.0.1"
   - name: dcgm-exporter
     required: true
     charts:
