--- a/llms/pegasus-xsum/pyproject.toml
+++ b/llms/pegasus-xsum/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "simple_ai_server>=0.2",
     "bitsandbytes", 
     "loralib",
+    "peft",
     "sentencepiece",
     "cuda-python"
     ]
