--- a/values.yaml
+++ b/values.yaml
@@ -16,7 +16,7 @@ image:
 env:
   # maybe set this to the internal URL:
   # OPENAI_BASE_URL: "http://api.leapfrogai.svc:8080"
-  OPENAI_BASE_URL: "https://leapfrogai.dd.bigbang.dev"
+  OPENAI_BASE_URL: "https://leapfrogai.###ZARF_VAR_DOMAIN###"
 
 modules:
   DEFAULT_VECTORIZER_MODULE: text2vec-transformers
@@ -24,27 +24,25 @@ modules:
     enabled: true
   text2vec-openai:
     enabled: true
-storage:
-  size: 32Gi # default
-
-domain: dd.bigbang.dev
-
-istio:
-  enabled: true
-
-monitoring:
-  enabled: true
-
-
-models:
   stablelm3b:
-    enabled: true
+    enabled: ###ZARF_VAR_STABLELM_3B_ENABLED###
     name: stablelm-3b
 
   all_MiniLM_L6_v2:
-    enabled: true
+    enabled: ###ZARF_VAR_ALL_MINILM_L6_V2_ENABLED###
     name: all-MiniLM-L6-v2
 
   whisper:
-    enabled: true
+    enabled: ###ZARF_VAR_WHISPER_ENABLED###
     name: whisper
+storage:
+  size: 32Gi # default
+
+domain: "###ZARF_VAR_DOMAIN"
+
+istio:
+  enabled: ###ZARF_VAR_ISTIO_ENABLED###
+
+monitoring:
+  enabled: ###ZARF_VAR_MONITORING_ENABLED###
+
