--- a/chart/templates/api/deployment.yaml
+++ b/chart/templates/api/deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: api-deployment
 spec:
   replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: api
@@ -14,7 +16,7 @@ spec:
     spec:
       containers:
         - name: api-container
-          image: ghcr.io/defenseunicorns/leapfrogai/api:0.0.4
+          image: ghcr.io/defenseunicorns/leapfrogai/api:{{ .Values.image.tag }}
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
