--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -14,4 +14,5 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Run Makefile command
-      run: make api
+      # just building, not pushing them
+      run: make api base repeater stablelm whisper
