--- a/models/text2vec/all-minilm-l6-v2/Dockerfile
+++ b/models/text2vec/all-minilm-l6-v2/Dockerfile
@@ -1,4 +1,5 @@
-FROM ghcr.io/defenseunicorns/leapfrogai/base:0.0.4
+ARG IMAGE_TAG
+FROM ghcr.io/defenseunicorns/leapfrogai/base:${IMAGE_TAG}
 # Install project
 COPY . .
 RUN pip install  --no-cache-dir --user  -r requirements.txt
