just images without models
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -15,4 +15,4 @@ jobs:
 
     - name: Run Makefile command
       # just building, not pushing them
-      run: make api base repeater stablelm whisper
+      run: make api base repeater
