commit the test
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -16,3 +16,5 @@ jobs:
     - name: Run Makefile command
       # just building, not pushing them
       run: make api base repeater
+    - name: Simple Test
+      run: make test-init test teardown
