--- a/.github/workflows/docker-build.yaml
+++ b/.github/workflows/docker-build.yaml
@@ -16,5 +16,7 @@ jobs:
     - name: Run Makefile command
       # just building, not pushing them
       run: make api base repeater
+    - name: install deps
+      run: pip install -r models/test/repeater/requirements.txt
     - name: Simple Test
       run: make test-init test teardown
