--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,4 +29,4 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build]
 include = ["leapfrogai/"]
-exclude = ["leapfrogai/Dockerfile", "leapfrogai/pyvenv.cfg"]
+exclude = ["leapfrogai/pyvenv.cfg"]
