--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.2.0"
 
 description = "A tool for building gRPC-based model backends for LeapfrogAI"
 authors = [
+    { name = "LeapfrogAI Authors", email = "ai@defenseunicorns.com" },
     { name = "Gerred Dillon", email = "gerred@defenseunicorns.com" },
     { name = "Tom Runyon", email = "tom@defenseunicorns.com" },
 ]
