--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "leapfrogai"
-version = "0.2.0.post6"
+version = "0.2.0"
 
 description = "A tool for building gRPC-based model backends for LeapfrogAI"
 authors = [
