Dynamic Discovery of models
Signed-off-by: Tom Runyon <tom@defenseunicorns.com>

--- a/zarf-config.yaml
+++ b/zarf-config.yaml
@@ -4,7 +4,7 @@ package:
       repo: "https://github.com/weaviate/weaviate-helm"
       tag: "v16.3.1"
       name: "weaviate"
-      values_file: "../values.yaml"
+      values_file: "../weaviate-values.yaml"
       path: "./weaviate"
       namespace: "weaviate"
     max_package_size: "1000000000"
