--- a/chart/templates/api/configmap.yaml
+++ b/chart/templates/api/configmap.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: api-model
+  labels:
+    leapfrogai: yeah
 data:
   models.toml: | 
 {{- if .Values.models.repeater.enabled }}
