--- a/chart/templates/api/deployment.yaml
+++ b/chart/templates/api/deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: api-deployment
 spec:
-  replicas: 1
+  replicas: {{ .Values.api.replcias }}
   strategy:
     type: Recreate
   selector:
@@ -14,20 +14,55 @@ spec:
       labels:
         app: api
     spec:
+      serviceAccountName: read-configmaps
       containers:
+        - name: sidecar
+          image: registry1.dso.mil/ironbank/kiwigrid/k8s-sidecar:1.23.3
+          volumeMounts:
+          - name:  api-model
+            mountPath: /config/
+          env:
+          - name: LABEL
+            value: "leapfrogai"
+          - name: FOLDER
+            value: /config/
+          - name: RESOURCE
+            value: both
+          - name: UNIQUE_FILENAMES
+            value: "true"
+          - name: NAMESPACE
+            value: leapfrogai
         - name: api-container
           image: ghcr.io/defenseunicorns/leapfrogai/api:{{ .Values.image.tag }}
           imagePullPolicy: Always
+          env:
+          - name: CONFIG_PATH
+            value: /config/
+          - name: GIN_MODE
+            value: release
+          - name: PORT
+            value: "{{ .Values.api.port }}"
           ports:
             - containerPort: 8080
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 10
+            periodSeconds: 10
           volumeMounts:
           - name: api-model
-            mountPath: /models.toml
-            subPath: models.toml
+            mountPath: /config
       volumes:
       - name: api-model
-        configMap:
-          name: api-model
+        emptyDir: {}
+        
 
     
   
