--- a/zarf.yaml
+++ b/zarf.yaml
@@ -4,7 +4,7 @@ kind: ZarfPackageConfig
 metadata:
   name: leapfrogai
   description: "LeapfrogAI"
-  version: 0.1.2
+  version: 0.2.1
   architecture: amd64
 
 components:
@@ -26,11 +26,11 @@ components:
       localPath: chart
       version: 0.0.2
       valuesFiles:
-        - "values.yaml"
+        - "leapfrog-values.yaml"
     images:
-      - "ghcr.io/defenseunicorns/leapfrogai/api:0.0.4"
-      - "ghcr.io/defenseunicorns/leapfrogai/stablelm-3b:0.0.1"
-      - "ghcr.io/defenseunicorns/leapfrogai/embeddings:0.0.1"
+      - "ghcr.io/defenseunicorns/leapfrogai/api:0.2.1"
+      - "ghcr.io/defenseunicorns/leapfrogai/stablelm-3b:0.2.1"
+      - "ghcr.io/defenseunicorns/leapfrogai/embeddings:0.2.1"
   - name: dcgm-exporter
     required: true
     charts:
