--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,13 @@ __pycache__
 venv
 .DS_Store
 dist/
+
+# local model files
+pytorch_model.bin
+model.bin
+tokenizer.json
+config.json
+vocabulary.json
+
+# go binaries
+api/main
