--- a/api/models2.toml
+++ b/api/models2.toml
@@ -1,3 +1,16 @@
+[mpt-7b-chat]
+
+[mpt-7b-chat.metadata]
+owned_by = ''
+permission = []
+description = 'MPT-7b-chat on GPU'
+tasks = ["completion", "chat"]
+
+[mpt-7b-chat.network]
+url = 'localhost:50051'
+type = 'gRPC'
+
+
 [ctransformers]
 
 [ctransformers.metadata]
