--- a/models/llms/mpt-7b-chat/requirements.txt
+++ b/models/llms/mpt-7b-chat/requirements.txt
@@ -13,18 +13,18 @@ lit==16.0.6
 MarkupSafe==2.1.3
 mpmath==1.3.0
 networkx==3.1
-numpy==1.25.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cufft-cu11==10.9.0.58
-nvidia-curand-cu11==10.2.10.91
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-nccl-cu11==2.14.3
-nvidia-nvtx-cu11==11.7.91
+# numpy==1.25.0
+# nvidia-cublas-cu11==11.10.3.66
+# nvidia-cuda-cupti-cu11==11.7.101
+# nvidia-cuda-nvrtc-cu11==11.7.99
+# nvidia-cuda-runtime-cu11==11.7.99
+# nvidia-cudnn-cu11==8.5.0.96
+# nvidia-cufft-cu11==10.9.0.58
+# nvidia-curand-cu11==10.2.10.91
+# nvidia-cusolver-cu11==11.4.0.1
+# nvidia-cusparse-cu11==11.7.4.91
+# nvidia-nccl-cu11==2.14.3
+# nvidia-nvtx-cu11==11.7.91
 packaging==23.1
 protobuf==4.23.4
 PyYAML==6.0
@@ -33,7 +33,7 @@ requests==2.31.0
 safetensors==0.3.1
 sympy==1.12
 tokenizers==0.13.3
-torch==2.0.1
+# torch==2.0.1
 tqdm==4.65.0
 transformers==4.30.2
 triton==2.0.0
