--- a/models/llms/stablelm/requirements.txt
+++ b/models/llms/stablelm/requirements.txt
@@ -1,8 +1,2 @@
-bitsandbytes
-datasets
-loralib
-sentencepiece
 transformers
-git+https://github.com/huggingface/peft.git
-simple_ai_server>=0.2
-cuda-python
+torch
