--- a/models/llms/mpt-7b-chat/requirements.txt
+++ b/models/llms/mpt-7b-chat/requirements.txt
@@ -9,6 +9,7 @@ grpcio-tools==1.56.0
 huggingface-hub==0.16.4
 idna==3.4
 Jinja2==3.1.2
+leapfrogai==0.3.0
 lit==16.0.6
 MarkupSafe==2.1.3
 mpmath==1.3.0
