--- a/models/speech2text/whisper/Dockerfile
+++ b/models/speech2text/whisper/Dockerfile
@@ -1,21 +1,16 @@
 ARG IMAGE_TAG
 FROM ghcr.io/defenseunicorns/leapfrogai/base:${IMAGE_TAG}
 # Install project
+# RUN curl -sSf https://rye-up.com/get | bash
+COPY --chown=user:user requirements.txt .
+RUN pip install -r requirements.txt
 
 COPY --chown=user:user main.py .
 COPY --chown=user:user get_model.py .
 COPY --chown=user:user .python-version .
-COPY --chown=user:user requirements.lock .
+
 COPY --chown=user:user pyproject.toml .
 COPY --chown=user:user README.md .
-RUN /home/$USER/.rye/shims/rye sync --no-dev --no-lock
-RUN /home/$USER/.rye/shims/rye run python get_model.py
-
-# Publish port
-ENV UVICORN_HOST=0.0.0.0
-ENV UVICORN_PORT=8000
-EXPOSE 8000:8000
 
 # Enjoy
-ENTRYPOINT ["/home/user/.rye/shims/rye", "run"]
-CMD ["uvicorn", "main:app"]
+ENTRYPOINT ["python3", "main.py"]
