--- a/weaviate-values.yaml
+++ b/weaviate-values.yaml
@@ -17,7 +17,7 @@ image:
 env:
   # maybe set this to the internal URL:
   # OPENAI_BASE_URL: "http://api.leapfrogai.svc:8080"
-  OPENAI_BASE_URL: "https://leapfrogai.leapfrogai.bigbang.dev"
+  OPENAI_BASE_URL: "https://leapfrogai.leapfrogai.bigbang.dev/openai"
 
 initContainers:
   sysctlInitContainer:
